--- a/greeting1.1.GREEN.yml
+++ b/greeting1.1.GREEN.yml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: greeting-app
+  name: green-greeting-app
 spec:
   replicas: 2
   strategy:
