--- a/greeting1.0.3replicas.yml
+++ b/greeting1.0.3replicas.yml
@@ -17,15 +17,17 @@ kind: Deployment
 metadata:
   name: greeting-app
 spec:
-  replicas: 5
+  replicas: 3
   selector:
     matchLabels:
       app: greeting-app
+      version: v1.0
   template:
     metadata:
       name: greeting-app
       labels:
         app: greeting-app
+        version: v1.0
     spec:
       containers:
         - name: greeting-app
