Updated nodePort setting

--- a/live-greeting-service.yml
+++ b/live-greeting-service.yml
@@ -9,6 +9,7 @@ spec:
   ports:
   - port: 8081
     targetPort: 8081
+    nodePort: 30092
   selector:
     app: green-greeting-app
     version: green
